--- a/task/package.json
+++ b/task/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tutorial-3",
+  "name": "task",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,7 +10,6 @@
   "author": "narpheesah",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
